ganeti (2.10.3-1+sci6) stretch; urgency=medium

  * add local libs for ganeti-luxid to work in stretch env

 -- Vladimir Ipatov <vs@ipatov.net>  Sat, 22 Sep 2018 16:58:45 +0300

ganeti (2.10.3-1~bpo70+sci5) stretch; urgency=medium

  * socat fixes for stretch
  * RAPI security fixes: bind to lo, require auth
  * Delete drbd secret from gnt-instance and RAPI answers

 -- Vladimir Ipatov <vs@ipatov.net>  Fri, 21 Sep 2018 16:58:45 +0300

ganeti (2.10.3-1~bpo70+sci4) wheezy-backports; urgency=medium

  * fixes for drbd >= 8.4: add drbdsetup new-device and new-mirror for network part assembling of drbd (needed for diskless states of drbd), relocate syncer parameters setting to local part (in 8.4 syncer require disk-config)

 -- Vladimir Ipatov <vs@ipatov.net>  Mon, 22 Jan 2018 16:58:45 +0300

ganeti (2.10.3-1~bpo70+sci3) wheezy-backports; urgency=medium

  * fix timeout for watcher startup after reboot

 -- Vladimir Ipatov <vs@ipatov.net>  Mon, 25 Oct 2016 03:00:45 +0300

ganeti (2.10.3-1~bpo70+sci2) wheezy-backports; urgency=medium

  * Add startup stages for watcher

 -- Vladimir Ipatov <vs@ipatov.net>  Mon, 10 Jun 2014 03:00:45 +0300

ganeti (2.10.3-1~bpo70+sci1) wheezy-backports; urgency=medium

  * Add blockev prefix for Solaris 11 patch

 -- Vladimir Ipatov <vs@ipatov.net>  Mon, 26 May 2014 02:13:09 +0300

ganeti (2.10.3-1~bpo70+1) wheezy-backports; urgency=medium

  * Rebuild for wheezy-backports.

 -- Apollon Oikonomopoulos <apoikos@debian.org>  Mon, 28 Apr 2014 22:38:01 +0300

ganeti (2.10.3-1) unstable; urgency=medium

  [ Apollon Oikonomopoulos ]
  * New upstream bugfix release (see /usr/share/doc/ganeti/NEWS.gz):
    + Fix filtering of pending jobs with -o id
    + Make RAPI API calls more symmetric
    + Make parsing of old cluster configuration more robust
    + Fix wrong output of gnt-instance info after migrations
    + Fix reserved PCI slots for KVM hotplugging
    + Use runtime hypervisor parameters to calculate bockdevice options for KVM